--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="Navbar">
         <ul>
             <li class="nav-title"> <b>Navigation Bar</b></li>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Game1.html">PROJECTION</a></li>
             <li><a href="G1Devlog.html"> Devlogs</a></li>
         </ul>
