--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="Game1.html">PROJECTION</a></li>
             <li><a href="G1Devlog.html"> Devlogs</a></li>
+            <li><a href="News.html"> News!</a></li>
         </ul>
     </section>
     <header>
