--- a/News.html
+++ b/News.html
@@ -21,6 +21,20 @@
     </header>
     <main>
         <section class = "section-default">
+            <h2>Wont be working alot on dev work</h2>
+            <h4>December 2, 2025</h4>
+            <p>
+                Due to personal reasons, I will not be working 
+                alot on game developmentand devlogs for the next
+                few weeks. I will try to post updates when I can,
+                but please understand if things are delayed.
+                Thank you for your patience and support! Also
+                i will focus more on schooland my science fair
+                project, but every 4-5PM EST i will post a New 
+                news letter or update, Goodbye for now and uh stay cool.
+            </p>
+        </section>
+        <section class = "section-default">
             <h2>Github website just published!</h2>
             <h4>December 1, 2025</h4>
             <p>
