--- a/News.html
+++ b/News.html
@@ -20,6 +20,18 @@
         <h1>NEWS!</h1>
     </header>
     <main>
+        <section class = "section-mininews">
+            <h2>Grand News</h2>
+            <h4>December 2, 2025</h4>
+            <p>
+                Mini news letter! I finished my a bit of my 
+                science fair project, and i am proud to say
+                that i can work on game development more often now!
+                Expect more frequent devlogs and updates on the
+                PROJECTION game! Thank you for your patience.
+                Goodbye for now and uh stay cool.
+            </p>
+        </section>
         <section class = "section-default">
             <h2>Wont be working alot on dev work</h2>
             <h4>December 2, 2025</h4>
@@ -31,7 +43,7 @@
                 Thank you for your patience and support! Also
                 i will focus more on schooland my science fair
                 project, but every 4-5PM EST i will post a New 
-                news letter or update, Goodbye for now and uh stay cool.
+                main news letter or update, Goodbye for now and uh stay cool.
             </p>
         </section>
         <section class = "section-default">
