--- a/G1Devlog.html
+++ b/G1Devlog.html
@@ -20,6 +20,28 @@
         <h1>PROJECTION DEVLOG</h1>
     </header>
     <main>
+        <div class="Section-with-video">
+            <div class="row-layout">
+                <div class="text-box">
+                    <h2>PROJECTION GOT massivlely UPDATED WITH ROOM GEN!</h2>
+                    <h4>December 2, 2025 5:39PM</h4>
+                    <p>
+                        PROJECTION just got updated massivlely! Room generation
+                        has been added to the game! this is a huge step forward
+                        for the game, and i am excited to share it with you all!
+                        Expect more updates and devlogs in the future! I will try
+                        to link a video below showing the new room generation
+                        in action! Thank you for your support and patience!
+                        Goodbye for now and uh stay cool.
+                    </p>
+                </div>
+                <div class="video-box">
+                    <video controls>
+                        <source src="1.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
         <section class = "section-default">
             <h2>Devlog just started!</h2>
             <h4>December 1, 2025</h4>
