--- a/News.html
+++ b/News.html
@@ -20,6 +20,17 @@
         <h1>NEWS!</h1>
     </header>
     <main>
+        <section class = "section-default">
+            <h2>Never Mind 🥲</h2>
+            <h4>December 3, 2025</h4>
+            <p>
+                obviously the post where i was talking about done with my science
+                project is now my mistake because i still have to do more work on it,
+                so yeah ignore that post my bad sorry for the confusion. buttttt, this
+                is the last day to do it meaning tommarow i will get back to working,
+                anyways goodbye for now and uh stay cool.
+            </p>
+        </section>
         <div class="Section-with-video">
             <div class="row-layout">
                 <div class="text-box">
@@ -35,7 +46,6 @@
                         Goodbye for now and uh stay cool.
                     </p>
                 </div>
-
                 <div class="video-box">
                     <video controls>
                         <source src="1.mp4" type="video/mp4">
