--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="BackgroundColor">
+    <script src="main.js"></script>
     <section class="Navbar">
         <ul>
             <li class="nav-title"> <b>Navigation Bar</b></li>
