--- a/index.html
+++ b/index.html
@@ -3,32 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
-    <title>PARCHED Offical Website</title>
+    <title>PARCHED Official Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/Carator.png">
 </head>
 <body class="BackgroundColor">
     <script src="main.js"></script>
     <section class="Navbar">
         <ul>
-            <li class="nav-title"> <b>Navigation Bar</b></li>
+            <li class="nav-title"><b>Navigation Bar</b></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="Game1.html">PROJECTION</a></li>
-            <li><a href="G1Devlog.html"> Devlogs</a></li>
-            <li><a href="News.html"> News!</a></li>
+            <li><a href="G1Devlog.html">Devlogs</a></li>
+            <li><a href="News.html">News!</a></li>
         </ul>
     </section>
     <header>
         <h1>Welcome to PARCHED</h1>
     </header>
     <main>
-        <section class = "section-default">
+        <section class="section-default">
             <h2>About Us</h2>
             <p>PARCHED is a team working on game development, Animation, perfection, and PEAK</p>
         </section>
         <section class="section-default">
-        <h2>Our Projects</h2>
+            <h2>Our Projects</h2>
             <ul>
                 <li><a href="Game1.html">PROJECTION</a></li>
             </ul>
         </section>
+    </main>
+</body>
 </html>
