--- a/G1Devlog.html
+++ b/G1Devlog.html
@@ -20,6 +20,17 @@
         <h1>PROJECTION DEVLOG</h1>
     </header>
     <main>
+        <section class = "section-default">
+            <h2>Projection Lore Sneak Peak</h2>
+            <h4>December 7, 2025</h4>
+            <p>
+                So i have been working on some lore for PROJECTION, and i wanted to
+                share a sneak peak of it with you all! It will be a filmed, animation
+                like lore and sites in the game that will give you more context about
+                the world of PROJECTION! If you want to see the video, it will be posted
+                on my youtube channel soon! Thank you for your support and patience!
+            </p>
+        </section>
         <div class="Section-with-video">
             <div class="row-layout">
                 <div class="text-box">
